[package]
name = "ewasm-precompile-sha256"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompile-sha256"
description = "Ethereum SHA256 precompile in Rust"
publish = false

[dependencies]
sha2 = "0.7"
ewasm_api = { git = "https://github.com/ewasm/ewasm-rust-api" }

[lib]
crate-type = ["cdylib"]
