[workspace]

members = [
    "blake2",
    "blake2f",
    "bls12pairing",
    "ecadd",
    "ecmul",
    "ecpairing",
    "ecrecover",
    "ed25519",
    "eip1962",
    "identity",
    "keccak256",
    "modexp",
    "ripemd160",
    "sha1",
    "sha256",
]

[profile.release]
lto = true
opt-level = 'z'
debug = false
