[package]
name = "ewasm-precompile-blake2"
version = "0.1.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum Blake2 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
blake2 = "0.7"
ewasm_api = "0.5"

[lib]
crate-type = ["cdylib"]
