[package]
name = "ewasm-precompile-blake2"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum Blake2 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
blake2 = "0.7"

[dependencies.ewasm_api]
version = "0.9"
default-features = false
features = ["std", "qimalloc"]

[lib]
crate-type = ["cdylib"]
