[package]
name = "ewasm-precompile-blake2"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum Blake2 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
byteorder = "1.3.4"
ewasm_api = "0.9"
arr_macro = "0.1.3"

[lib]
crate-type = ["cdylib"]
