[package]
name = "ewasm-precompile-bls12pairing"
version = "0.1.1"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum BLS12-381 pairing precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.5"
ethereum-bls12 = { git = "https://github.com/ewasm/ethereum-bls12.rs", tag = "0.1.1" }
parity-bytes = { git = "https://github.com/paritytech/parity-common", version = "0.1.0" }

[lib]
crate-type = ["cdylib"]
