[package]
name = "ewasm-precompile-bls12pairing"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum BLS12-381 pairing precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ethereum-bls12 = { git = "https://github.com/ewasm/ethereum-bls12.rs", tag = "0.1.2" }

[dependencies.ewasm_api]
version = "0.9"
default-features = false
features = ["std", "qimalloc"]

[lib]
crate-type = ["cdylib"]
