[package]
name = "ewasm-precompile-ecadd"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum ECADD precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.9"
ethereum-bn128 = { git = "https://github.com/ewasm/ethereum-bn128.rs", tag = "0.1.0" }

[lib]
crate-type = ["cdylib"]
