[package]
name = "ewasm-precompile-ecmul"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum ECMUL precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.5"
ethereum-bn128 = { git = "https://github.com/ewasm/ethereum-bn128.rs", tag = "0.0.1" }
parity-bytes = { git = "https://github.com/paritytech/parity-common" }

[lib]
crate-type = ["cdylib"]
