[package]
name = "ewasm-precompile-ecpairing"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum ECPAIRING precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.8"
ethereum-bn128 = { git = "https://github.com/ewasm/ethereum-bn128.rs", tag = "0.0.1" }
parity-bytes = { git = "https://github.com/paritytech/parity-common", version = "0.1.0" }

[lib]
crate-type = ["cdylib"]
