[package]
name = "ewasm-precompile-ecrecover"
version = "0.2.0"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum ecrecover precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.9"
libsecp256k1 = "^0.2.1"
tiny-keccak = "1.4"

[dev-dependencies]
rustc-hex = "1.0"

[lib]
crate-type = ["cdylib"]
