[package]
name = "ewasm-precompile-ed25519"
version = "0.2.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum Ed25519 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.9"
hex = "0.3.1"
sha2 = "^0.8"

[dependencies.rand]
version = "0.6.0"

[dependencies.ed25519-dalek]
version = "0.9.1"

[dependencies.clear_on_drop]
features = ["no_cc"]
version = "^0.2.3"

[lib]
crate-type = ["cdylib"]
