[package]
name = "ewasm-precompile-identity"
version = "0.1.1"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum identity precompile in Rust"
publish = false

[dependencies]
ewasm_api = { git = "https://github.com/ewasm/ewasm-rust-api", tag = "0.2.0" }

[lib]
crate-type = ["cdylib"]
