[package]
name = "ewasm-precompile-identity"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum identity precompile in Rust"
publish = false

[dependencies]
ewasm_api = "0.4"

[lib]
crate-type = ["cdylib"]
