[package]
name = "ewasm-precompile-keccak256"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum Keccak-256 precompile in Rust"
publish = false

[dependencies]
ewasm_api = "0.5"
keccak-hash = { git = "https://github.com/paritytech/parity-common" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.2"

[lib]
crate-type = ["cdylib"]
