[package]
name = "ewasm-precompile-keccak256"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum Keccak-256 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.9"
tiny-keccak = "1.4"

[lib]
crate-type = ["cdylib"]
