[package]
name = "ewasm-precompile-keccak256"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum Keccak-256 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
tiny-keccak = "1.4"

[dependencies.ewasm_api]
version = "0.9"
default-features = false
features = ["std", "qimalloc"]

[lib]
crate-type = ["cdylib"]
