[package]
name = "ewasm-precompile-modexp"
version = "0.2.0"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum modexp precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.9"
num = { version = "0.1.36", default-features = false }
num-bigint = { version = "0.1.36", default-features = false }

[lib]
crate-type = ["cdylib"]
