[package]
name = "ewasm-precompile-modexp"
version = "0.1.0"
authors = ["Guillaume Ballet <gballet@gmail.com>"]
license = "Apache-2.0"
repository = ""
description = "Ethereum modexp precompile in Rust"
publish = false
edition = "2018"

[dependencies]
num = {version = "0.1.36", default-features = false}
num-bigint = {version = "0.1.36", default-features = false}
ewasm_api = "0.5"

[lib]
crate-type = ["cdylib"]
