[package]
name = "ewasm-precompile-ripemd160"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum RIPEMD160 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.9"
ripemd160 = "0.7"

[lib]
crate-type = ["cdylib"]
