[package]
name = "ewasm-precompile-ripemd160"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum RIPEMD160 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ripemd160 = "0.7"
ewasm_api = "0.8"

[lib]
crate-type = ["cdylib"]
