[package]
name = "ewasm-precompile-sha256"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum SHA256 precompile in Rust"
publish = false

[dependencies]
sha2 = "0.7"
ewasm_api = "0.4"

[lib]
crate-type = ["cdylib"]
