[package]
name = "ewasm-precompile-sha256"
version = "0.2.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum SHA256 precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = { version = "0.9", default-features = false, features = ["std", "qimalloc"] }
sha2 = "0.7"

[lib]
crate-type = ["cdylib"]
